--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -9,12 +9,19 @@
         "start": "next start"
     },
     "dependencies": {
+        "@radix-ui/react-select": "^2.1.2",
+        "@radix-ui/react-slot": "^1.1.0",
         "@types/node": "^22.10.1",
         "@types/react": "^18.3.12",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "lucide-react": "^0.465.0",
         "next": "^15.0.3",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-fast-marquee": "^1.6.5",
+        "tailwind-merge": "^2.5.5",
+        "tailwindcss-animate": "^1.0.7",
         "typescript": "^5.7.2"
     },
     "devDependencies": {
