--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -9,8 +9,11 @@
         "start": "next start"
     },
     "dependencies": {
+        "@radix-ui/react-dropdown-menu": "^2.1.2",
+        "@radix-ui/react-progress": "^1.1.0",
         "@radix-ui/react-select": "^2.1.2",
         "@radix-ui/react-slot": "^1.1.0",
+        "@radix-ui/react-tabs": "^1.1.1",
         "@types/node": "^22.10.1",
         "@types/react": "^18.3.12",
         "class-variance-authority": "^0.7.1",
