--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
-    "name": "xpad-crossfi-memecoin-launchpad",
-    "version": "1.0.0",
-    "private": true,
-    "scripts": {
-        "dev": "yarn workspace frontend dev"
-    },
-    "workspaces": [
-        "packages/*"
+  "name": "xpad",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "yarn workspace frontend dev"
+  },
+  "workspaces": {
+    "packages": [
+      "packages/*"
+    ],
+    "nohoist": [
+      "**/hardhat",
+      "**/hardhat/**"
     ]
+  }
 }
