--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -1,39 +1,39 @@
 {
-    "name": "frontend",
-    "version": "1.0.0",
-    "main": "index.js",
-    "license": "MIT",
-    "scripts": {
-        "dev": "next dev",
-        "build": "next build",
-        "start": "next start"
-    },
-    "dependencies": {
-        "@radix-ui/react-dialog": "^1.1.2",
-        "@radix-ui/react-dropdown-menu": "^2.1.2",
-        "@radix-ui/react-label": "^2.1.0",
-        "@radix-ui/react-progress": "^1.1.0",
-        "@radix-ui/react-select": "^2.1.2",
-        "@radix-ui/react-slot": "^1.1.0",
-        "@radix-ui/react-tabs": "^1.1.1",
-        "@types/node": "^22.10.1",
-        "@types/react": "^18.3.12",
-        "class-variance-authority": "^0.7.1",
-        "clsx": "^2.1.1",
-        "lucide-react": "^0.465.0",
-        "next": "^15.0.3",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1",
-        "react-fast-marquee": "^1.6.5",
-        "tailwind-merge": "^2.5.5",
-        "tailwindcss-animate": "^1.0.7",
-        "typescript": "^5.7.2"
-    },
-    "devDependencies": {
-        "autoprefixer": "^10.4.20",
-        "clsx": "^2.1.1",
-        "postcss": "^8.4.49",
-        "tailwind-merge": "^2.5.5",
-        "tailwindcss": "^3.4.15"
-    }
+  "name": "@xpad/frontend",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
+  "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
+    "@types/node": "^22.10.1",
+    "@types/react": "^18.3.12",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.465.0",
+    "next": "^15.0.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.7.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "clsx": "^2.1.1",
+    "postcss": "^8.4.49",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss": "^3.4.15"
+  }
 }
