--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -1,30 +1,42 @@
 {
-  "name": "hardhat",
+  "name": "@xpad/hardhat",
   "version": "1.0.0",
-  "devDependencies": {
-    "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
-    "@nomicfoundation/hardhat-ethers": "^3.0.0",
-    "@nomicfoundation/hardhat-ignition": "^0.15.8",
-    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.0",
-    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
-    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "@nomicfoundation/hardhat-verify": "^2.0.0",
-    "@nomicfoundation/ignition-core": "^0.15.8",
-    "@typechain/ethers-v6": "^0.5.0",
-    "@typechain/hardhat": "^9.0.0",
-    "@types/chai": "^4.2.0",
-    "@types/mocha": ">=9.1.0",
-    "chai": "^4.2.0",
-    "dotenv": "^16.4.5",
-    "hardhat": "^2.22.4",
-    "hardhat-gas-reporter": "^1.0.8",
-    "solidity-coverage": "^0.8.1",
-    "ts-node": ">=8.0.0",
-    "typechain": "^8.3.0",
-    "typescript": ">=4.5.0"
+  "scripts": {
+    "chain": "npx hardhat node",
+    "compile": "npx hardhat compile",
+    "test": "npx hardhat test",
+    "clean": "npx hardhat clean",
+    "format": "prettier --write \"*/**/*.{js,ts,tsx,css,md,json,sol}\"",
+    "type-check": "echo 'not implemented'",
+    "lint:ts": "echo 'not implemented'",
+    "read:crossfitestnet": "npx hardhat run scripts/read.ts --network crossfitestnet",
+    "write:crossfitestnet": "npx hardhat run scripts/write.ts --network crossfitestnet",
+    "deploy:localhost": "npx hardhat run scripts/deploy.ts --network localhost",
+    "deploy:crossfitestnet": "npx hardhat run scripts/deploy.ts --network crossfitestnet"
   },
-  "dependencies": {
+  "devDependencies": {
+    "@ethersproject/hardware-wallets": "^5.7.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@nomiclabs/hardhat-waffle": "^2.0.5",
     "@openzeppelin/contracts": "^5.0.2",
-    "ethers": "^6.12.1"
+    "@typechain/ethers-v5": "^10.2.1",
+    "@typechain/hardhat": "^6.1.6",
+    "@types/chai": "^4.3.5",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^20.4.5",
+    "@types/prompt-sync": "^4.2.3",
+    "chai": "^4.3.7",
+    "cli-select": "^1.1.2",
+    "ethereum-waffle": "^4.0.10",
+    "ethers": "^5.7.2",
+    "hardhat": "^2.17.1",
+    "node-hid": "2.1.2",
+    "prettier": "^2.8.8",
+    "prettier-plugin-solidity": "^1.1.3",
+    "prompt-sync": "^4.2.0",
+    "ts-node": "^10.9.1",
+    "typechain": "^8.1.1",
+    "typescript": "^5.0.4"
   }
 }
