--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -27,11 +27,13 @@
         "react-fast-marquee": "^1.6.5",
         "tailwind-merge": "^2.5.5",
         "tailwindcss-animate": "^1.0.7",
+        "thirdweb": "^5.76.1",
         "typescript": "^5.7.2"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.20",
         "clsx": "^2.1.1",
+        "pino-pretty": "^13.0.0",
         "postcss": "^8.4.49",
         "tailwind-merge": "^2.5.5",
         "tailwindcss": "^3.4.15"
