--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -20,6 +20,7 @@
         "@types/react": "^18.3.12",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "formik": "^2.4.6",
         "lucide-react": "^0.465.0",
         "next": "^15.0.3",
         "react": "^18.3.1",
@@ -28,7 +29,8 @@
         "tailwind-merge": "^2.5.5",
         "tailwindcss-animate": "^1.0.7",
         "thirdweb": "^5.76.1",
-        "typescript": "^5.7.2"
+        "typescript": "^5.7.2",
+        "yup": "^1.5.0"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.20",
